@@ -1,5 +1,11 @@
 2006-07-09  Iain <iain@gnome.org>
 
+	* FindStation.cs: Add Neighbour searching
+
+	* NeighbourView.cs: View to show neighbours
+
+2006-07-09  Iain <iain@gnome.org>
+
 	* configure.ac: Update to version 1
 
 2006-07-09  Iain <iain@gnome.org>
